--- a/package.json
+++ b/package.json
@@ -17,17 +17,18 @@
     "autoprefixer": "10.4.14",
     "eslint": "8.44.0",
     "eslint-config-next": "13.4.9",
-    "iron-session": "^6.3.1",
-    "next": "13.4.9",
+    "iron-session": "^8.0.1",
+    "next": "14.2.3",
     "postcss": "8.4.25",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-hook-form": "^7.48.2",
     "swr": "^2.2.0",
     "tailwindcss": "3.3.2",
-    "teamcowboy": "^1.0.2",
+    "teamcowboy.js": "^1.0.3",
     "typescript": "5.1.6"
   },
   "volta": {
-    "node": "18.16.1"
+    "node": "18.20.3"
   }
 }
