--- a/package.json
+++ b/package.json
@@ -9,26 +9,22 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@headlessui/react": "^1.7.15",
-    "@heroicons/react": "^2.0.18",
     "@types/node": "20.4.2",
-    "@types/react": "18.2.14",
-    "@types/react-dom": "18.2.7",
-    "autoprefixer": "10.4.14",
-    "eslint": "8.44.0",
-    "eslint-config-next": "13.4.9",
-    "iron-session": "^8.0.1",
-    "next": "14.2.3",
-    "postcss": "8.4.25",
-    "react": "18.2.0",
-    "react-dom": "18.2.0",
-    "react-hook-form": "^7.48.2",
-    "swr": "^2.2.0",
-    "tailwindcss": "3.3.2",
-    "teamcowboy.js": "^1.0.3",
-    "typescript": "5.1.6"
+    "eslint": "^9.0.0",
+    "eslint-config-next": "^15.3.2",
+    "jose": "^6.0.11",
+    "next": "^15.3.2",
+    "react": "^19.1.0",
+    "react-dom": "^19.1.0",
+    "server-only": "^0.0.1",
+    "teamcowboy.js": "^2.0.0",
+    "typescript": "5.1.6",
+    "zod": "^3.24.4"
   },
   "volta": {
-    "node": "18.20.3"
+    "node": "20.19.1"
+  },
+  "devDependencies": {
+    "@types/react": "19.1.0"
   }
 }
