--- a/package.json
+++ b/package.json
@@ -9,14 +9,24 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@radix-ui/react-avatar": "^1.1.10",
+    "@radix-ui/react-dropdown-menu": "^2.1.15",
+    "@radix-ui/react-slot": "^1.2.3",
+    "@tailwindcss/postcss": "^4.1.6",
     "@types/node": "20.4.2",
+    "class-variance-authority": "^0.7.1",
+    "clsx": "^2.1.1",
     "eslint": "^9.0.0",
     "eslint-config-next": "^15.3.2",
     "jose": "^6.0.11",
+    "lucide-react": "^0.510.0",
     "next": "^15.3.2",
+    "postcss": "^8.5.3",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "server-only": "^0.0.1",
+    "tailwind-merge": "^3.3.0",
+    "tailwindcss": "^4.1.6",
     "teamcowboy.js": "^2.0.0",
     "typescript": "5.1.6",
     "zod": "^3.24.4"
@@ -25,6 +35,7 @@
     "node": "20.19.1"
   },
   "devDependencies": {
-    "@types/react": "19.1.0"
+    "@types/react": "19.1.0",
+    "tw-animate-css": "^1.3.4"
   }
 }
